# rpgn

./: Cargo.toml  README.md  build_rs_cov.profraw
.github/workflows/: check.yml  correctness.yml  coverage.yml  format.yml  test.yml
benches/: benches.rs  pgn.rs  variation.rs
examples/: example.rs
src/: concat_strings.rs  date.rs  eco.rs  eco_category.rs  legal_move_list.rs  legal_variation.rs  lib.rs  move_number.rs  movetext.rs  outcome.rs  pgn.rs  raw_header_owned.rs  round.rs  samples.rs  san_list.rs  seven_tag_roster.rs  time_control.rs  time_control_field.rs  turn.rs  variation.rs  visitor.rs
src/game/: date.rs  game.rs  mod.rs  outcome.rs  round.rs  visitor.rs
src/movetext/: mod.rs  sans.rs  variation.rs
src/pgn/: date.rs  mod.rs  outcome.rs  pgn.rs  round.rs  samples.rs  visitor.rs
