[package]
name = "rpgn"
version = "0.5.2"
edition = "2021"
authors = ["Leonard D. <tigerros.gh@gmail.com>"]
description = "A crate for parsing PGNs (Portable [Chess] Game Notation)."
license = "GPL-3.0"
repository = "https://github.com/tigerros/rpgn"
categories = ["parser-implementations", "game-development", "parsing"]
keywords = ["chess", "pgn", "parser"]
include = ["src", "README.md"]
rust-version = "1.78.0"

[dependencies]
pgn-reader = "0.26.*"
shakmaty = "0.27.*"
dry-mods = "0.1.*"
paste = "1.0.*"
fast-concat = "1.0.*"
constcat = "0.6.*"

[dev-dependencies]
test-case = "3.3.*"
pretty_assertions = "1.4.*"
proptest = "1.6.*"
criterion = "0.5.*"

[[bench]]
name = "pgn"
harness = false
