[package]
name = "rpgn"
version = "0.8.1"
edition = "2021"
authors = ["Leonard D. <tigerros.gh@gmail.com>"]
description = "A crate for parsing PGNs (Portable [Chess] Game Notation)."
license = "GPL-3.0"
repository = "https://github.com/tigerros/rpgn"
categories = ["parser-implementations", "game-development", "parsing"]
keywords = ["chess", "pgn", "parser"]
include = ["src", "README.md"]

[features]
time = ["dep:time"]
serde = ["shakmaty/serde", "dep:serde", "deranged/serde"]

[dependencies]
constcat = "~0.6"
deranged = { version = "~0.4", default-features = false }
dry-mods = "~0.1"
fast-concat = "1"
pgn-reader = "~0.26"
serde = { version = "1.0.197", features = ["derive"], optional = true }
shakmaty = "0.27.3"
time = { version = "0.3.1", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.6.0"
pretty_assertions = "1.4.1"
proptest = "1.7.0"
test-case = "3.3.1"

[[bench]]
name = "pgn"
harness = false
